--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h1>This is my headline</h1>
+  <img scr="kitty.jpg">
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque id nisi ipsa qui delectus est voluptatem natus facere et ratione, perspiciatis voluptates possimus eligendi repellat tempora consequuntur maiores alias.
   </article>
