--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <title>my shiny new page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>This is my headline</h1>
