--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>This is my headline</h1>
-  <img scr="kitty.jpg">
+  <img class="kitty" src="kitty.jpg">
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque id nisi ipsa qui delectus est voluptatem natus facere et ratione, perspiciatis voluptates possimus eligendi repellat tempora consequuntur maiores alias.
   </article>
