--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <title>my shiny new page</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 </html>
 <body>
@@ -9,5 +9,4 @@
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque id nisi ipsa qui delectus est voluptatem natus facere et ratione, perspiciatis voluptates possimus eligendi repellat tempora consequuntur maiores alias.
   </article>
-  
 </body>
