--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </html>
 <body>
   <h1>This is my headline</h1>
+  <img src="kitty.jpeg">
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque id nisi ipsa qui delectus est voluptatem natus facere et ratione, perspiciatis voluptates possimus eligendi repellat tempora consequuntur maiores alias.
   </article>
