--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </html>
 
 <body>
-  <h1>This is my headline</h1>
+  <h1>Meet Kitty - the cutest cat of the world</h1>
   <img src="kitty.jpeg">
   <article>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque id nisi ipsa qui delectus est voluptatem
-    natus facere et ratione, perspiciatis voluptates possimus eligendi repellat tempora consequuntur maiores alias.
+    This marvelous feline is known for
+    <ul>
+      <li>it's agility</li>
+      <li>love for lasagne</li>
+      <li>indifference towards mice</li>
+    </ul>
   </article> <hr>
   <div>checkout this <a href="https://duckduckgo.com" target="blank">link</a></div>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ab dolore temporibus impedit ratione odit molestiae
