--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
   <h1>Meet Kitty - the cutest cat of the world</h1>
   <img src="kitty.jpeg">
-  <article>
+  <div>
     This marvelous feline is known for
     <ul>
       <li>it's agility</li>
       <li>love for lasagne</li>
       <li>indifference towards mice</li>
     </ul>
-  </article> <hr>
+  </div>
+  <hr>
   <div>checkout this <a href="https://duckduckgo.com" target="blank">link</a></div>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ab dolore temporibus impedit ratione odit molestiae
     saepe eligendi ex quis nemo aliquid tenetur aperiam, necessitatibus nihil officia velit obcaecati? Sit libero facere
