--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </ul>
   </div>
   <hr>
-  <div>checkout this <a href="https://duckduckgo.com" target="blank">link</a></div>
+  <div>checkout this <a href="https://duckduckgo.com" target="blank">link</a> to avoid the evil google AI</div>
+  <hr><br>
+  <span>CAN YOU READ THIS:</span>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ab dolore temporibus impedit ratione odit molestiae
     saepe eligendi ex quis nemo aliquid tenetur aperiam, necessitatibus nihil officia velit obcaecati? Sit libero facere
     sunt vel, excepturi error optio nulla doloremque qui odit non maiores nemo eos fuga. Repellat, odio non eligendi
@@ -28,3 +30,4 @@
     facilis excepturi voluptatem provident. Velit, laboriosam nihil. Voluptatem, distinctio iusto illum cum saepe ipsam
     quasi eum molestias? Esse dolore maxime blanditiis sapiente fugiat, </p>
 </body>
+<span>IF NOT: DON'T YOU WORRY <br> neither can kitty....</span>
